--- a/pickIt/Resources/Base.lproj/Main.storyboard
+++ b/pickIt/Resources/Base.lproj/Main.storyboard
@@ -26,7 +26,6 @@
                                 </variation>
                                 <connections>
                                     <action selector="registerOrSignIn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="yAj-Fe-ihR"/>
-                                    <segue destination="kAl-wC-Y2q" kind="show" id="qTD-zA-iwu"/>
                                 </connections>
                             </button>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YIP-LU-nEb">
@@ -212,30 +211,6 @@
             </objects>
             <point key="canvasLocation" x="301.5" y="336"/>
         </scene>
-        <!--News Feed View Controller-->
-        <scene sceneID="x6z-7Z-mHb">
-            <objects>
-                <viewController id="kAl-wC-Y2q" customClass="NewsFeedViewController" customModule="pickIt" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="Xaz-dD-7lZ"/>
-                        <viewControllerLayoutGuide type="bottom" id="GUv-wu-jgC"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="CV5-Ns-dtm">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="0fP-Dn-b6v">
-                                <rect key="frame" x="45" y="50" width="510" height="513"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            </tableView>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="zR4-O2-sJ8" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="696" y="1041"/>
-        </scene>
         <!--My Account View Controller-->
         <scene sceneID="vnZ-Qn-7IP">
             <objects>
@@ -253,64 +228,80 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
-                                <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="123" y="40" width="155" height="21"/>
-                                </variation>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OQc-BX-0Rz">
                                 <rect key="frame" x="-42" y="-21" width="42" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
-                                <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="71" y="110" width="45" height="21"/>
-                                </variation>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dtV-IG-e1I">
                                 <rect key="frame" x="-42" y="-21" width="42" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
-                                <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="72" y="172" width="41" height="21"/>
-                                </variation>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8o1-w8-WHn">
-                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
-                                <state key="normal" title="Edit Account"/>
-                                <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="157" y="565" width="87" height="30"/>
-                                </variation>
-                                <connections>
-                                    <action selector="editAccount:" destination="MgP-Dt-OAI" eventType="touchUpInside" id="rGo-BR-5cf"/>
-                                </connections>
-                            </button>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Y6c-oa-RWk">
                                 <rect key="frame" x="-25" y="-30" width="97" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
-                                <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="224" y="110" width="97" height="30"/>
-                                </variation>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xwp-AV-OdE">
                                 <rect key="frame" x="-25" y="-30" width="97" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
-                                <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="224" y="172" width="97" height="30"/>
-                                </variation>
                             </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8o1-w8-WHn">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <state key="normal" title="Edit Account"/>
+                                <connections>
+                                    <action selector="editAccount:" destination="MgP-Dt-OAI" eventType="touchUpInside" id="rGo-BR-5cf"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="8o1-w8-WHn" firstAttribute="centerX" secondItem="APX-xx-poz" secondAttribute="centerX" id="2pt-ul-Snd"/>
+                            <constraint firstItem="Ytt-dN-rSp" firstAttribute="top" secondItem="FIV-Z9-eup" secondAttribute="bottom" constant="30" id="8Ug-1t-m24"/>
+                            <constraint firstItem="Y6c-oa-RWk" firstAttribute="top" secondItem="Ytt-dN-rSp" secondAttribute="bottom" constant="30" id="Bwh-XV-Ao9"/>
+                            <constraint firstItem="OQc-BX-0Rz" firstAttribute="leading" secondItem="APX-xx-poz" secondAttribute="leadingMargin" constant="30" id="CxP-q6-PWs"/>
+                            <constraint firstItem="Ytt-dN-rSp" firstAttribute="centerX" secondItem="APX-xx-poz" secondAttribute="centerX" id="Dwo-qG-KAK"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="xwp-AV-OdE" secondAttribute="trailing" constant="30" id="Ex9-9n-Zgd"/>
+                            <constraint firstItem="xwp-AV-OdE" firstAttribute="bottom" secondItem="dtV-IG-e1I" secondAttribute="bottom" id="FCj-p9-lsK"/>
+                            <constraint firstItem="dtV-IG-e1I" firstAttribute="leading" secondItem="APX-xx-poz" secondAttribute="leadingMargin" constant="30" id="JbS-Dt-cXm"/>
+                            <constraint firstItem="8o1-w8-WHn" firstAttribute="top" secondItem="xwp-AV-OdE" secondAttribute="bottom" constant="30" id="LO1-bK-wB6"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Y6c-oa-RWk" secondAttribute="trailing" constant="60" id="PTa-7O-ILw">
+                                <variation key="heightClass=regular-widthClass=compact" constant="30"/>
+                            </constraint>
+                            <constraint firstItem="Y6c-oa-RWk" firstAttribute="bottom" secondItem="OQc-BX-0Rz" secondAttribute="bottom" id="SH9-vF-6wf"/>
+                            <constraint firstItem="Y6c-oa-RWk" firstAttribute="leading" secondItem="OQc-BX-0Rz" secondAttribute="trailing" constant="100" id="SPh-6X-Isa"/>
+                            <constraint firstItem="xwp-AV-OdE" firstAttribute="leading" secondItem="dtV-IG-e1I" secondAttribute="trailing" constant="100" id="fvq-OC-eir"/>
+                            <constraint firstItem="xwp-AV-OdE" firstAttribute="top" secondItem="Y6c-oa-RWk" secondAttribute="bottom" constant="30" id="mdR-QJ-4Pn"/>
+                        </constraints>
                         <variation key="default">
                             <mask key="subviews">
                                 <exclude reference="Ytt-dN-rSp"/>
                                 <exclude reference="OQc-BX-0Rz"/>
                                 <exclude reference="dtV-IG-e1I"/>
-                                <exclude reference="8o1-w8-WHn"/>
                                 <exclude reference="Y6c-oa-RWk"/>
                                 <exclude reference="xwp-AV-OdE"/>
+                                <exclude reference="8o1-w8-WHn"/>
+                            </mask>
+                            <mask key="constraints">
+                                <exclude reference="CxP-q6-PWs"/>
+                                <exclude reference="8Ug-1t-m24"/>
+                                <exclude reference="Dwo-qG-KAK"/>
+                                <exclude reference="JbS-Dt-cXm"/>
+                                <exclude reference="Bwh-XV-Ao9"/>
+                                <exclude reference="PTa-7O-ILw"/>
+                                <exclude reference="SH9-vF-6wf"/>
+                                <exclude reference="SPh-6X-Isa"/>
+                                <exclude reference="Ex9-9n-Zgd"/>
+                                <exclude reference="FCj-p9-lsK"/>
+                                <exclude reference="fvq-OC-eir"/>
+                                <exclude reference="mdR-QJ-4Pn"/>
+                                <exclude reference="2pt-ul-Snd"/>
+                                <exclude reference="LO1-bK-wB6"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=regular-widthClass=compact">
@@ -318,9 +309,25 @@
                                 <include reference="Ytt-dN-rSp"/>
                                 <include reference="OQc-BX-0Rz"/>
                                 <include reference="dtV-IG-e1I"/>
-                                <include reference="8o1-w8-WHn"/>
                                 <include reference="Y6c-oa-RWk"/>
                                 <include reference="xwp-AV-OdE"/>
+                                <include reference="8o1-w8-WHn"/>
+                            </mask>
+                            <mask key="constraints">
+                                <include reference="CxP-q6-PWs"/>
+                                <include reference="8Ug-1t-m24"/>
+                                <include reference="Dwo-qG-KAK"/>
+                                <include reference="JbS-Dt-cXm"/>
+                                <include reference="Bwh-XV-Ao9"/>
+                                <include reference="PTa-7O-ILw"/>
+                                <include reference="SH9-vF-6wf"/>
+                                <include reference="SPh-6X-Isa"/>
+                                <include reference="Ex9-9n-Zgd"/>
+                                <include reference="FCj-p9-lsK"/>
+                                <include reference="fvq-OC-eir"/>
+                                <include reference="mdR-QJ-4Pn"/>
+                                <include reference="2pt-ul-Snd"/>
+                                <include reference="LO1-bK-wB6"/>
                             </mask>
                         </variation>
                     </view>
@@ -331,7 +338,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ofl-fH-I1i" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1075" y="336"/>
+            <point key="canvasLocation" x="1213.5" y="336"/>
         </scene>
     </scenes>
 </document>
